svn merge -r 1026526:1026527 https://svn.apache.org/repos/asf/openejb/branches/openejb-3.1.x
http://svn.apache.org/viewvc?view=revision&revision=1026527
------------------------------------------------------------------------
r1026527 | dblevins | 2010-10-22 16:29:48 -0700 (Fri, 22 Oct 2010) | 2 lines

OPENEJB-1371: Double encoding of persistence-unit root-url leads to issues in paths with spaces

------------------------------------------------------------------------


git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb3@1026528 13f79535-47bb-0310-9956-ffa450edef68